--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
       </nav>
     </header>
 
-    <main class="pt-20">
-      <section id="home" class="flex items-center min-h-screen bg-gray-900 ">
+    <main class="pt-20 bg-[url(https://unsplash.com/photos/people-sitting-down-near-table-with-assorted-laptop-computers-SYTO3xs06fU)]">
+      <section id="home" class="flex items-center min-h-screen bg-gray-900">
         <div
-          class="container mx-auto flex flex-col-reverse md:flex-row items-center justify-between px-12"
+          class="container mx-auto flex md:flex-row items-center justify-center px-12"
         >
-          <div class="text-left md:w-1/2 space-y-5" data-aos="fade-right">
-            <h1 class="text-2xl font-bold text-gray-400">Hello, I'm Catur Setyono</h1>
+          <div class="md:w-1/2 space-y-5" data-aos="fade-right">
+            <h1 class="text-2xl font-bold text-gray-400">Hi, I'm Catur Setyono</h1>
             <h1 class="text-5xl font-bold">
               Software <span class="text-green-500">Developer</span>
             </h1>
@@ -69,7 +69,7 @@
               >Download CV</a
             >
           </div>
-          <div class="md:w-1/2 mt-10 md:mt-0">
+          <div class="md:w-1/2 mt-10 md:mt-0 " data-aos="flip-left">
             <img
               src="./public/profil.jpg"
               alt="Catur Setyono"
@@ -80,7 +80,7 @@
         </div>
       </section>
 
-      <section id="about" class="py-20 bg-gray-800" data-aos="fade-up">
+      <section id="about" class="py-20 bg-gray-900" data-aos="fade-up">
         <div class="container mx-auto text-center px-4">
           <h2 class="text-4xl font-semibold text-white">About Me</h2>
           <p class="mt-4 text-gray-400 max-w-2xl mx-auto">
