--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Catur Setyono - Portfolio</title>
+    <link rel="stylesheet" href="./style/global.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
@@ -16,7 +17,7 @@
   </head>
   <body class="bg-gray-900 text-white font-poppins">
     <header
-      class="fixed w-full z-20 bg-gray-900 bg-opacity-80 backdrop-blur-md"
+      class="fixed w-full  z-20 bg-gray-900 bg-opacity-80 backdrop-blur-md"
     >
       <nav class="container mx-auto flex justify-center items-center p-6">
         <ul class="hidden md:flex space-x-9 text-white">
@@ -51,32 +52,56 @@
       </nav>
     </header>
 
-    <main class="pt-20 bg-[url(https://unsplash.com/photos/people-sitting-down-near-table-with-assorted-laptop-computers-SYTO3xs06fU)]">
-      <section id="home" class="flex items-center min-h-screen bg-gray-900">
+    <main
+      class="pt-20 bg-[url(https://unsplash.com/photos/people-sitting-down-near-table-with-assorted-laptop-computers-SYTO3xs06fU)]"
+    >
+      <section
+        id="home"
+        class="flex items-center min-h-screen bg-gradient-to-br from-gray-900 via-gray-800 to-gray-900 relative overflow-hidden"
+      >
         <div
-          class="container mx-auto flex md:flex-row items-center justify-center px-12"
+          class="container mx-auto flex flex-col md:flex-row items-center justify-between px-6 md:px-12 lg:px-20"
         >
-          <div class="md:w-1/2 space-y-5" data-aos="fade-right">
-            <h1 class="text-2xl font-bold text-gray-400">Hi, I'm Catur Setyono</h1>
-            <h1 class="text-5xl font-bold">
-              Software <span class="text-green-500">Developer</span>
-            </h1>
-            <p class="text-lg text-gray-400">Frontend Web</p>
-            <a
-              href="path/to/your/cv.pdf"
-              download
-              class="bg-green-500 hover:bg-green-600 text-white px-6 py-2 rounded-sm inline-block transition-transform transform hover:-translate-y-1"
-              >Download CV</a
+          <!-- Kiri -->
+          <div class="md:w-1/2 mt-10 md:mt-0 relative h-[300px] w-full flex items-center justify-center">
+            <div class="ring ring-1"></div>
+            <div class="ring ring-2"></div>
+            <div class="ring ring-3"></div>
+          </div>
+
+        <!-- Kanan -->
+        <div class="md:w-1/2 space-y-6" data-aos="fade-right">
+          <h1 class="text-2xl md:text-3xl font-semibold text-gray-400">
+            Hi, I'm <span class="text-white">Catur Setyono</span>
+          </h1>
+          <h2
+            class="text-4xl md:text-6xl font-extrabold text-white leading-tight"
+          >
+            Software <span class="text-green-400">Developer</span>
+          </h2>
+          <p class="text-lg text-gray-400">
+            Frontend Web Enthusiast with a Passion for Clean UI & UX
+          </p>
+          <a
+            href="path/to/your/cv.pdf"
+            download
+            class="inline-flex items-center gap-2 bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded-md text-lg shadow-md transition-transform transform hover:-translate-y-1"
+          >
+            <svg
+              class="w-5 h-5"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              viewBox="0 0 24 24"
             >
-          </div>
-          <div class="md:w-1/2 mt-10 md:mt-0 " data-aos="flip-left">
-            <img
-              src="./public/profil.jpg"
-              alt="Catur Setyono"
-              class="rounded-lg shadow-xl w-64 h-64 md:w-80 md:h-80 mx-auto"
-              data-aos="fade-left"
-            />
-          </div>
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M4 4v16h16V4H4zm4 4h8m-4 4v4m0 0l-3-3m3 3l3-3"
+              />
+            </svg>
+            Download CV
+          </a>
         </div>
       </section>
 
